kubernetes/cd/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: argocd.jochem.codes
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: http
  tls:
    - hosts:
        - argocd.jochem.codes
      secretName: argocd-tls
